<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
        <item
            android:id="@+id/nav_login"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_add"
            android:title="@string/nav_add" />
        <item
            android:id="@+id/nav_chart"
            android:title="@string/nav_chart" />
    <!--</group>-->

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_setting"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout"
                android:visible="false"/>
        </menu>
    </item>

</menu>
